@startuml

' Estilos globales
skinparam class {
    BackgroundColor #E3F2FD
    BorderColor #0D47A1
    ArrowColor #0D47A1
    FontName Arial
    FontSize 14
    AttributeFontColor #0D47A1
    MethodFontColor #1565C0
    Shadowing true
    Rounded true
}
abstract class Persona {
    # nombre : String
    # dni : String
    # email : String
    # direccion : String
    --
    + Persona(
        nombre : String,
        dni : String,
        email : String,
        direccion : String
    )
    + getNombre() : String
    + setNombre(nombre : String) : void
    + getDni() : String
    + setDni(dni : String) : void
    + getEmail() : String
    + setEmail(email : String) : void
    + getDireccion() : String
    + setDireccion(direccion : String) : void
    + toString() : String
}

class Usuario {
    # username : String
    # passwordHash : String
    # salt : String
    --
    + Usuario(
        nombre : String,
        dni : String,
        email : String,
        direccion : String,
        username : String,
        passwordHash : String,
        salt : String
    )
    + getUsername() : String
    + setUsername(username : String) : void
    + getPasswordHash() : String
    + setPasswordHash(passwordHash : String) : void
    + getSalt() : String
    + setSalt(salt : String) : void
    + toString() : String
}

class Paciente {
    - historial : HistorialMedico
    - medicoAsignado : Medico
    --
    + Paciente(
        nombre : String,
        dni : String,
        email : String,
        direccion : String
    )
    + getHistorial() : HistorialMedico
    + setHistorial(historial : HistorialMedico) : void
    + getMedicoAsignado() : Medico
    + setMedicoAsignado(medicoAsignado : Medico) : void
    + toString() : String
}

class HistorialMedico {
    - entradas : List<EntradaHistorial>
    --
    + HistorialMedico()
    + getEntradas() : List<EntradaHistorial>
    + agregarEntrada(entradaHistorial : EntradaHistorial) : void
    + toString() : String
}

abstract class EntradaHistorial {
    # fecha : LocalDate
    # idMedico : String
    # causa : String
    --
    + EntradaHistorial(
        fecha : LocalDate,
        idMedico : String,
        causa : String
    )
    + getFecha() : LocalDate
    + getIdMedico() : String
    + getCausa() : String
    + getTipo() : String
}

class PruebaMedica {
    - tipoPrueba : TipoPrueba
    - resultado : String
    --
    + PruebaMedica(
        fecha : LocalDate,
        idMedico : String,
        causa : String,
        tipoPrueba : TipoPrueba,
        resultado : String
    )
    + getTipoPrueba() : TipoPrueba
    + getResultado() : String
    + getTipo() : String
    + toString() : String
}

class Receta {
    - medicamentos : List<String>
    --
    + Receta(
        fecha : LocalDate,
        idMedico : String,
        causa : String,
        medicamentos : List<String>
    )
    + getMedicamentos() : List<String>
    + getTipo() : String
    + toString() : String
}

class Administrativo {
    - idAdministrativo : String
    --
    + Administrativo(
        nombre : String,
        dni : String,
        email : String,
        direccion : String,
        username : String,
        passwordHash : String,
        salt : String,
        idAdministrativo : String
    )
    + getIdAdministrativo() : String
    + setIdAdministrativo(idAdministrativo : String) : void
    + asignarMedico(paciente : Paciente, medico : Medico) : void
    + asignarPrueba(paciente : Paciente, pruebaMedica : PruebaMedica) : void
    + toString() : String
}

abstract class PersonalSanitario {
    # numeroColegiado : String
    --
    + PersonalSanitario(
        nombre : String,
        dni : String,
        email : String,
        direccion : String,
        username : String,
        passwordHash : String,
        salt : String,
        numeroColegiado : String
    )
    + getNumeroColegiado() : String
    + setNumeroColegiado(numeroColegiado : String) : void
}

class Medico {
    - especialidad : Especialidad
    --
    + Medico(
        nombre : String,
        dni : String,
        email : String,
        direccion : String,
        username : String,
        passwordHash : String,
        salt : String,
        numeroColegiado : String,
        especialidad : Especialidad
    )
    + getEspecialidad() : Especialidad
    + setEspecialidad(especialidad : Especialidad) : void
    + toString() : String
}

enum Especialidad {
    ...
}

' CONSTANTES DEL ENUM:
/'
    MEDICINA_FAMILIAR
    PEDIATRIA
    CARDIOLOGIA
    NEUROLOGIA
    DERMATOLOGIA
    PSIQUIATRIA
    GINECOLOGIA
    TRAUMATOLOGIA
    OFTALMOLOGIA
    OTORRINOLARINGOLOGIA
    ENDOCRINOLOGIA
    NEFROLOGIA
    NEUMOLOGIA
    ONCOLOGIA
    REUMATOLOGIA
    GASTROENTEROLOGIA
    UROLOGIA
    CIRUGIA_GENERAL
    ANESTESIOLOGIA
    RADIOLOGIA
'/

enum TipoPrueba {
    ...
}

' CONSTANTES DEL ENUM:
/'
    ANALISIS_SANGRE
    ANALISIS_ORINA
    RADIOGRAFIA
    RESONANCIA
    ECOGRAFIA
    ELECTROCARDIOGRAMA
    TEST_ALERGIAS
    PRUEBA_ESFUERZO
    ENDOSCOPIA
'/

class Main {
    + main(args : String[]) : void
}

' MAIN LLAMA A CONTROLADOR:
Main --> Controlador : inicia

class Controlador {
    + iniciar() : void
}

' VISTA ES SOLO EJECUTADA POR CONTROLADOR:

Controlador --> Vista : usa

class Vista {
    + imprimir(salida : String) : void
}

' RELACIONES DE HERENCIA:
Persona <|-- Usuario
Persona <|-- Paciente
Usuario <|-- Administrativo
Usuario <|-- PersonalSanitario
PersonalSanitario <|-- Medico
EntradaHistorial <|-- PruebaMedica
EntradaHistorial <|-- Receta
' RELACIONES DE COMPOSICIÓN / AGREGACIÓN:
Paciente *-- HistorialMedico : tiene
Paciente -- Medico : asignado
HistorialMedico *-- EntradaHistorial : contiene
' ENUMS:
Medico --> Especialidad
PruebaMedica --> TipoPrueba
' RELACIONES EN EL CONTROLADOR:
Controlador --> Administrativo
Controlador --> Medico
Controlador --> Paciente
Controlador --> PruebaMedica
Controlador --> Receta
Controlador --> HistorialMedico

@enduml